# nichinichi

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  latest.json  package-lock.json  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/src/commands/: archive.rs  ask.rs  edit.rs  goals.rs  log.rs  mod.rs  playbooks.rs  prompts.rs  sync.rs
apps/desktop/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/desktop/src/components/: Skeleton.tsx
apps/desktop/src/components/ai/: AskPanel.tsx
apps/desktop/src/components/feed/: EntryComposer.tsx  FeedCard.tsx
apps/desktop/src/components/graphs/: RadialGraph.tsx  StreamGraph.tsx  SwimLaneGraph.tsx
apps/desktop/src/components/stats/: Heatmap.tsx  MomentumGraph.tsx
apps/desktop/src/hooks/: useActiveModel.ts  useActivity.ts  useAi.ts  useAiTabs.ts  useEntries.ts  useFontSize.ts  useGoals.ts  useOrg.ts  useStats.ts  useSyncStatus.ts  useTheme.ts  useTimezone.ts
apps/desktop/src/styles/: globals.css
apps/desktop/src/types/: entry.ts  goal.ts  index.ts
apps/desktop/src/utils/: date.ts
apps/desktop/src/views/: DashboardView.tsx  GoalsView.tsx  LogView.tsx  PlaybooksView.tsx  ReportsView.tsx  SettingsView.tsx
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs  query.rs  save.rs  stream.rs
crates/cloud/: Cargo.toml
crates/cloud/src/: client.rs  error.rs  lib.rs  manifest.rs  merge.rs
crates/parser/: Cargo.toml
crates/parser/src/: config.rs  digest.rs  entry.rs  goal.rs  lib.rs  playbook.rs  router.rs
crates/sync/: Cargo.toml
crates/sync/migrations/: 001_initial.sql
crates/sync/src/: db.rs  incremental.rs  lib.rs  local_sqlite.rs  rebuild.rs  sync_target.rs  watcher.rs
crates/types/: Cargo.toml
crates/types/src/: ai.rs  config.rs  digest.rs  entry.rs  goal.rs  lib.rs  playbook.rs
demo/: README.md
demo/devlog/: 2026-03-06.md  2026-03-10.md  2026-03-11.md  2026-03-13.md  2026-03-14.md  2026-03-17.md  2026-03-18.md  2026-03-19.md  2026-03-20.md  2026-03-21.md
demo/devlog/ai/: 2026-03-17-jwt-refresh-pattern.md  2026-03-20-auth-design-decisions.md
demo/devlog/archive/2025/: 2025-12-30.md  2025-12-31.md
demo/devlog/digests/: 2026-02-28-monthly.md  2026-03-17-weekly.md  2026-Q1-review.md
demo/devlog/goals/active/: become-staff-engineer.md  learn-distributed-systems.md  read-technical-books.md
demo/devlog/goals/archive/: 2025-learn-typescript.md  read-technical-books.md
demo/devlog/playbooks/: debugging-memory-leaks.md  incident-runbook.md  new-feature-checklist.md
demo/nichinichi/: 2026-03-05.md  2026-03-07.md  2026-03-12.md  2026-03-13.md  2026-03-19.md  2026-03-21.md  2026-03-22.md
demo/nichinichi/.quiet/: 2026-03-21.md
demo/nichinichi/ai/: 2026-03-17-jwt-refresh-pattern.md  2026-03-20-auth-design-decisions.md
demo/nichinichi/archive/2025/: 2025-12-31.md
demo/nichinichi/digests/: 2026-02-28-monthly.md  2026-Q1-review.md
demo/nichinichi/goals/active/: become-staff-engineer.md  learn-distributed-systems.md
demo/nichinichi/goals/archive/: 2025-learn-typescript.md
docs/: ai-chat.md  development.md  file-formats.md  icon-setup.md  logging-guide.md  releasing.md  testing.md
ui-wireframe/nichinichi-preview/: index.html  package-lock.json  package.json
ui-wireframe/nichinichi-preview/src/: App.jsx
