[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/parser",
    "crates/sync",
    "crates/ai",
    "crates/cloud",
    "apps/cli",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# shared across all crates
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
serde_yaml       = "0.9"
tokio            = { version = "1", features = ["full"] }
thiserror        = "1"
anyhow           = "1"
chrono           = { version = "0.4", features = ["serde"] }
dirs             = "5"
async-trait      = "0.1"

# parser
sha2             = "0.10"

# sync
sqlx             = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "migrate"] }
notify           = "6"
notify-debouncer-mini = "0.4"

# ai / cloud
reqwest          = { version = "0.12", features = ["json", "stream"] }
futures          = "0.3"
hex              = "0.4"

# cli
clap             = { version = "4", features = ["derive"] }
colored          = "2"
dialoguer        = "0.11"

# desktop
tauri            = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog    = "2"
tauri-plugin-updater   = "2"
open             = "5"
urlencoding      = "2"

# internal crates
nichinichi-types     = { path = "crates/types" }
nichinichi-parser    = { path = "crates/parser" }
nichinichi-sync      = { path = "crates/sync" }
nichinichi-ai        = { path = "crates/ai" }
nichinichi-cloud     = { path = "crates/cloud" }
