[package]
name = "nichinichi-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nichinichi"
path = "src/main.rs"

[dependencies]
nichinichi-types  = { workspace = true }
nichinichi-parser = { workspace = true }
nichinichi-sync   = { workspace = true }
nichinichi-ai     = { workspace = true }
clap          = { workspace = true }
colored       = { workspace = true }
anyhow        = { workspace = true }
tokio         = { workspace = true }
chrono        = { workspace = true }
serde_json    = { workspace = true }
dialoguer     = { workspace = true }
sqlx          = { workspace = true }
