[package]
name = "nichinichi-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nichinichi-types = { workspace = true }
nichinichi-sync  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
sqlx         = { workspace = true }
tokio        = { workspace = true }
thiserror    = { workspace = true }
reqwest      = { workspace = true }
futures      = { workspace = true }
chrono       = { workspace = true }
