[package]
name = "nichinichi-parser"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
nichinichi-types = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
serde_yaml   = { workspace = true }
sha2         = { workspace = true }
chrono       = { workspace = true }
thiserror    = { workspace = true }
dirs         = { workspace = true }

[dev-dependencies]
tempfile = "3"
