[package]
name = "nichinichi-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nichinichi-types = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
serde_yaml   = { workspace = true }
sha2         = { workspace = true }
chrono       = { workspace = true }
thiserror    = { workspace = true }
dirs         = { workspace = true }

[dev-dependencies]
tempfile = "3"
