[package]
name = "nichinichi-sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nichinichi-types  = { workspace = true }
nichinichi-parser = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
sqlx          = { workspace = true }
tokio         = { workspace = true }
thiserror     = { workspace = true }
async-trait   = { workspace = true }
notify        = { workspace = true }
notify-debouncer-mini = { workspace = true }
chrono        = { workspace = true }
dirs          = { workspace = true }

[dev-dependencies]
tempfile  = "3"
tokio     = { workspace = true }
