[package]
name = "devlog-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "devlog_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
devlog-types  = { workspace = true }
devlog-parser = { workspace = true }
devlog-sync   = { workspace = true }
devlog-ai     = { workspace = true }
tauri         = { workspace = true }
tauri-plugin-autostart = { workspace = true }
tauri-plugin-dialog    = { workspace = true }
anyhow        = { workspace = true }
tokio         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
open          = { workspace = true }
urlencoding   = { workspace = true }
chrono        = { workspace = true }
dirs          = { workspace = true }
sqlx          = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }
