[package]
name = "nichinichi-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "nichinichi_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
nichinichi-types  = { workspace = true }
nichinichi-parser = { workspace = true }
nichinichi-sync   = { workspace = true }
nichinichi-ai     = { workspace = true }
nichinichi-cloud  = { workspace = true }
tauri         = { workspace = true }
tauri-plugin-autostart = { workspace = true }
tauri-plugin-dialog    = { workspace = true }
tauri-plugin-updater   = { workspace = true }
anyhow        = { workspace = true }
tokio         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
open          = { workspace = true }
urlencoding   = { workspace = true }
chrono        = { workspace = true }
dirs          = { workspace = true }
sqlx          = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }
